--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,18 @@
 
     <!-- Контакти -->
     <ul class="site-auth"> 
-        <li class="item"><a href="mailto:info@devstudio.com" class="link-contact">info@devstudio.com</a></li>
-        <li class="item"><a href="tel:+380961111111" class="link-contact">+380961111111</a></li>
+        <li class="item"><a href="mailto:info@devstudio.com" class="link-contact">
+            <svg class="icon" width="16px" height="12px">
+                <use href="./images/icons.svg#icon-envelope">
+                </use>
+            </svg>
+            info@devstudio.com</a></li>
+        <li class="item"><a href="tel:+380961111111" class="link-contact">
+            <svg class="icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-smartphone">
+                </use>
+            </svg>
+            +380961111111</a></li>
     </ul>
         </div>
     
@@ -160,15 +170,46 @@
     </main>
 
     <footer class="section footer">
-        <div class="container">
-        <a href="./index.html" class="logo"><span class="web">Web</span><span class="studio">Studio</span></a>
-
-        <address class="address">
-              <p class="street">г. Киев, пр-т Леси Украинки, 26</p> 
-              <a href="mailto:info@devstudio.com" class="link-contact">info@devstudio.com</a><br/>
-              <a href="tel:+380961111111" class="link-contact">+38 096 111 11 11</a><br/>
-        </address>
-        </div>
+        <div class="container footer">
+            <div class="container-address">
+            <a href="./index.html" class="logo"><span class="web">Web</span><span class="studio">Studio</span></a>
+    
+            <address class="address">
+                  <p class="street">г. Киев, пр-т Леси Украинки, 26</p> 
+                  <a href="mailto:info@devstudio.com" class="link-contact">info@devstudio.com</a><br/>
+                  <a href="tel:+380961111111" class="link-contact">+38 096 111 11 11</a><br/>
+            </address>
+            </div>
+            <div class="join">
+                <h3 class="title">Присоединяйтесь</h3> 
+                <ul class="social-links">
+                    <li class="social-links-item">
+                        <svg class="social-link" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-instagram">
+                        </use>
+                        </svg>
+                    </li>
+                    <li class="social-links-item">
+                        <svg class="social-link" width="20px" height="20px">
+                        <use href="./images/icons.svg#icon-twitter">
+                        </use>
+                         </svg>
+                    </li>
+                    <li class="social-links-item">
+                        <svg class="social-link" width="20px" height="20px">
+                            <use href="./images/icons.svg#icon-facebook">
+                            </use>
+                        </svg>
+                    </li>
+                    <li class="social-links-item">
+                        <svg class="social-link" width="20px" height="20px">
+                            <use href="./images/icons.svg#icon-linkedin">
+                            </use>
+                        </svg>
+                    </li>
+                    </ul>
+            </div>    
+            </div>
     </footer>
 </body>
 </html>
