background-icons-hover-focus

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Контакти -->
     <ul class="site-auth"> 
         <li class="item">
-            <a href="mailto:info@devstudio.com" class="link-contact current">
+            <a href="mailto:info@devstudio.com" class="link-contact">
                 <svg class="icon" width="16px" height="12px">
                     <use href="./images/icons.svg#icon-envelope">
                     </use>
@@ -98,6 +98,9 @@
             </ul>
             </div>
         </section>
+
+    <!-- Чем мы занимаемся -->
+
         <section class="section work-types">
             <div class="container">
             <h2 class="section-title">Чем мы занимаемся</h2>
@@ -127,7 +130,7 @@
             </div>
         </section>
 
-        <!-- Команда --> 
+    <!-- Команда --> 
         <section class="section team">
             <div class="container">
             <h2 class= "section-title">Наша команда</h2>
@@ -294,13 +297,15 @@
             </ul>
             </div>
         </section>
+
+    <!-- Постоянные клиенты --> 
         <section class="section clients">
             <div class="container">
             <h2 class= "section-title">Постоянные клиенты</h2>
             <ul class="clients-list">
                 <li class="item">
                     <div class="thumb-clients">
-                        <svg class="client1" width="106px" height="60px">
+                        <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client1">
                             </use>
                         </svg>
@@ -308,7 +313,7 @@
                 </li>
                 <li class="item">
                     <div class="thumb-clients">
-                        <svg class="client2" width="106px" height="60px">
+                        <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client2">
                             </use>
                         </svg>
@@ -316,7 +321,7 @@
                 </li>
                 <li class="item">
                     <div class="thumb-clients">
-                        <svg class="client3" width="106px" height="60px">
+                        <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client3">
                             </use>
                         </svg>
@@ -324,7 +329,7 @@
                 </li>
                 <li class="item">
                     <div class="thumb-clients">
-                        <svg class="client4" width="106px" height="60px">
+                        <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client4">
                             </use>
                         </svg>
@@ -332,7 +337,7 @@
                 </li>
                 <li class="item">
                     <div class="thumb-clients">
-                        <svg class="client5" width="106px" height="60px">
+                        <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client5">
                             </use>
                         </svg>
@@ -340,7 +345,7 @@
                 </li>
                 <li class="item">
                     <div class="thumb-clients">
-                        <svg class="client6" width="106px" height="60px">
+                        <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client6">
                             </use>
                         </svg>
