--- a/index.html
+++ b/index.html
@@ -147,28 +147,36 @@
                     <div>
                         <ul class="social-links">
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-instagram">
                             </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-twitter">
                             </use>
-                             </svg>
+                            </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         </ul>
                     <div>  
@@ -187,28 +195,36 @@
                     <div>
                         <ul class="social-links">
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-instagram">
                             </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-twitter">
                             </use>
-                             </svg>
+                            </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         </ul>
                     <div>
@@ -227,28 +243,36 @@
                     <div>
                         <ul class="social-links">
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-instagram">
                             </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-twitter">
                             </use>
-                             </svg>
+                            </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         </ul>
                     <div>  
@@ -267,28 +291,36 @@
                     <div>
                         <ul class="social-links">
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-instagram">
                             </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-twitter">
                             </use>
-                             </svg>
+                            </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         <li class="social-links-item">
+                            <a href="" class="social-contact">
                             <svg class="social-link" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin">
                                 </use>
                             </svg>
+                            </a>
                         </li>
                         </ul>
                     <div>
@@ -304,52 +336,52 @@
             <h2 class= "section-title">Постоянные клиенты</h2>
             <ul class="clients-list">
                 <li class="item">
-                    <div class="thumb-clients">
+                    <a href="" class="client-info">
                         <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client1">
                             </use>
                         </svg>
-                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <div class="thumb-clients">
+                    <a href="" class="client-info">
                         <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client2">
                             </use>
                         </svg>
-                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <div class="thumb-clients">
+                    <a href="" class="client-info">
                         <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client3">
                             </use>
                         </svg>
-                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <div class="thumb-clients">
+                    <a href="" class="client-info">
                         <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client4">
                             </use>
                         </svg>
-                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <div class="thumb-clients">
+                    <a href="" class="client-info">
                         <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client5">
                             </use>
                         </svg>
-                    </div>
+                    </a>
                 </li>
                 <li class="item">
-                    <div class="thumb-clients">
+                    <a href="" class="client-info">
                         <svg class="client" width="106px" height="60px">
                             <use href="./images/icons.svg#icon-client6">
                             </use>
                         </svg>
-                    </div>
+                    </a>
                 </li>
             </ul>
             </div>
@@ -371,28 +403,36 @@
             <h3 class="title">Присоединяйтесь</h3> 
             <ul class="social-links">
                 <li class="social-links-item">
+                    <a href="" class="social-contact footer">
                     <svg class="social-link" width="20px" height="20px">
                     <use href="./images/icons.svg#icon-instagram">
                     </use>
                     </svg>
+                    </a>
                 </li>
                 <li class="social-links-item">
+                    <a href="" class="social-contact footer">
                     <svg class="social-link" width="20px" height="20px">
                     <use href="./images/icons.svg#icon-twitter">
                     </use>
-                     </svg>
+                    </svg>
+                    </a>
                 </li>
                 <li class="social-links-item">
+                    <a href="" class="social-contact footer">
                     <svg class="social-link" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-facebook">
-                        </use>
+                    <use href="./images/icons.svg#icon-facebook">
+                    </use>
                     </svg>
+                    </a>
                 </li>
                 <li class="social-links-item">
+                    <a href="" class="social-contact footer">
                     <svg class="social-link" width="20px" height="20px">
-                        <use href="./images/icons.svg#icon-linkedin">
-                        </use>
+                    <use href="./images/icons.svg#icon-linkedin">
+                    </use>
                     </svg>
+                    </a>
                 </li>
                 </ul>
         </div>    
