--- a/portfolio.html
+++ b/portfolio.html
@@ -184,28 +184,36 @@
                 <h3 class="title">Присоединяйтесь</h3> 
                 <ul class="social-links">
                     <li class="social-links-item">
+                        <a href="" class="social-contact footer">
                         <svg class="social-link" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-instagram">
                         </use>
                         </svg>
+                        </a>
                     </li>
                     <li class="social-links-item">
+                        <a href="" class="social-contact footer">
                         <svg class="social-link" width="20px" height="20px">
                         <use href="./images/icons.svg#icon-twitter">
                         </use>
-                         </svg>
+                        </svg>
+                        </a>
                     </li>
                     <li class="social-links-item">
+                        <a href="" class="social-contact footer">
                         <svg class="social-link" width="20px" height="20px">
-                            <use href="./images/icons.svg#icon-facebook">
-                            </use>
+                        <use href="./images/icons.svg#icon-facebook">
+                        </use>
                         </svg>
+                        </a>
                     </li>
                     <li class="social-links-item">
+                        <a href="" class="social-contact footer">
                         <svg class="social-link" width="20px" height="20px">
-                            <use href="./images/icons.svg#icon-linkedin">
-                            </use>
+                        <use href="./images/icons.svg#icon-linkedin">
+                        </use>
                         </svg>
+                        </a>
                     </li>
                     </ul>
             </div>    
